--- a/app/src/main/res/layout/activity_add_memo.xml
+++ b/app/src/main/res/layout/activity_add_memo.xml
@@ -8,13 +8,6 @@
     android:orientation="vertical"
     tools:context=".AddMemo">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="메모 생성"
-        android:textSize="34sp" />
-
     <EditText
         android:id="@+id/editTitle"
         android:layout_width="match_parent"
@@ -34,6 +27,11 @@
         android:hint="내용 입력"
         android:inputType="textPersonName"
         android:textSize="24sp" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
 
     <LinearLayout
         android:layout_width="match_parent"
