--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,26 +32,17 @@
             android:layout_marginLeft="10dp"
             android:layout_weight="6"
             android:padding="5dp"
-            app:srcCompat="@drawable/add" />
+            app:srcCompat="@drawable/ic_add" />
 
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/recyclerViewImage"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="20dp"
         android:layout_weight="7">
 
     </androidx.recyclerview.widget.RecyclerView>
 
-    <Button
-        android:id="@+id/btnAdd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="20dp"
-        android:paddingLeft="30dp"
-        android:paddingRight="30dp"
-        android:text="메모 생성"
-        android:textSize="24sp" />
 </LinearLayout>
