--- a/app/src/main/res/layout/image_row.xml
+++ b/app/src/main/res/layout/image_row.xml
@@ -7,20 +7,22 @@
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_width="196dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imgPhoto"
-                android:layout_width="226dp"
-                android:layout_height="wrap_content"
+                android:layout_width="175dp"
+                android:layout_height="100dp"
                 android:layout_weight="1"
                 tools:srcCompat="@tools:sample/avatars" />
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
